Edited wiki page Buildings through web user interface.

--- a/wiki/Buildings.wiki
+++ b/wiki/Buildings.wiki
@@ -15,7 +15,7 @@ Some buildings are done already. Here are some more buildings that I would like 
   * Ruined buildings
   * Others...
 
-== Planned random elements ==
+= Planned random elements =
 
   * Signs
   * Rotation (ideally to the nearest path)
