Edited wiki page UnreleasedChanges through web user interface.

--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -11,3 +11,4 @@ The main focus of V1.4.0 will be the city buildings and their layout. Changes do
  * City size now aligns with chunk size, to make the edges a little better
  * Flowers and grass will now randomly appear amongst the farms and in the city
  * Outside light sources will now be fires or torches. This can be specified before generating
+ * Beacons are now optional
