--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -16,3 +16,4 @@ The main focus of V1.4.0 will be the city buildings and their layout. Changes do
  * Beacons are now optional
  * Wrote name generators for the taverns, brothels and churches
  * Added two city emblems
+ * Added mushroom farms
