Edited wiki page UnreleasedChanges through web user interface.

--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -2,18 +2,19 @@
 
 The main focus of V1.4.0 will be the city buildings and their layout. Changes done so far:
 
- * The city is now randomly divided into rectangles by paths
+ * Rewrote the path layout code, to divide the city into rectangles
  * Random buildings are imported into the city. They are chosen by weighted randomness (so more houses and trees, rather than statues and graveyards)
  * Buildings are stored in the Mace world (in the Resources folder), which can be edited in !MineCraft
- * Building data is stored in buildings.xml, which means it is possible to add and remove buildings
+ * Building data is stored in buildings.xml, which means it is possible to add and remove buildings, or change how frequently they appear
  * Made about twenty buildings
  * Added main roads going through the city, which link the north/south entrance and the east/west entrance. They are slightly wider and have street lights
  * Removed the sewer. I want to focus development time on the city
  * Wheat farms are now covered in glass, to stop spiders destroying them. Thanks to Curufea for letting me know about that.
- * City size now aligns with chunk size, to make the edges a little better
- * Flowers and grass will now randomly appear amongst the farms and in the city
+ * Added flowers/grass between buildings and farms
  * Outside light sources will now be fires or torches. This can be specified before generating
  * Beacons are now optional
  * Wrote name generators for the taverns, brothels, gravestones, bakery, library, statue and churches
  * Added two city emblems
  * Added mushroom farms
+ * Added street names
+ * City size now aligns with chunk size, to make the edges a little better
