--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -13,4 +13,4 @@ These changes are done and will be in V1.5.0:
  * Each "very rare" building will now appear a maximum of once per quarter of the city. Each "rare" building will now appear a maximum of twice per quarter of the city.
  * Greenhouses are now "rare" frequency, rather than "average". Thanks to Sammmiii for this suggestion.
  * Streets names are now all unique.
- * Mace will now automatically work out the height of imported buildings. The starting Y axis is set to 63 (ground level) by default, which can be overwriten by adding <source_start_y>7</source_start_y> (change 7 to be the lowest point of your building) to the relevent section of the buildings.xml file.
+ * Mace will now automatically work out the height of imported buildings. The starting Y axis is set to 63 (ground level) by default, which can be overwriten by adding {{{<source_start_y>7</source_start_y>}}} (change 7 to be the lowest point of your building) to the relevent section of the buildings.xml file.
