--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -15,3 +15,4 @@ These changes are done and will be in V1.5.0:
  * Greenhouses are now "rare" frequency, rather than "average". Thanks to Sammmiii for this suggestion.
  * Streets names are now all unique.
  * Mace will now automatically work out the height of imported buildings. The starting Y axis is set to 63 (ground level) by default, which can be overwriten by adding {{{<source_start_y>7</source_start_y>}}} (change 7 to be the lowest point of your building) to the relevent section of the buildings.xml file.
+ * Building names on signs are now unique. Gravestones are unique within each graveyard.
