--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -4,8 +4,6 @@ I am aiming to have these things in V1.5.0:
 
  * Rotating buildings to the nearest path.
  * More buildings (rich house with pool, ruined house)
- * Stop the mini city farms being destroyed by naughty pigs
- * Put torches on top of street signs
  * Other stuff...
 
 These changes are done and will be in V1.5.0:
@@ -14,5 +12,7 @@ These changes are done and will be in V1.5.0:
  * "Very rare" buildings will not spawn within 50 blocks of the same type of building. "Rare" buildings will not spawn within 25 blocks of the same type of building.
  * Greenhouses are now "rare" frequency, rather than "average". Thanks to Sammmiii for this suggestion.
  * Streets names are now all unique.
- * Mace will now automatically work out the height of imported buildings. The starting Y axis is set to 63 (ground level) by default, which can be overwriten by adding {{{<source_start_y>7</source_start_y>}}} (change 7 to be the lowest point of your building) to the relevent section of the buildings.xml file.
+ * Mace will now automatically work out the height of imported buildings. The starting Y axis is set to 63 (ground level) by default, which can be overwritten by adding {{{<source_start_y>7</source_start_y>}}} (change 7 to be the lowest point of your building) to the relevent section of the buildings.xml file.
  * Building names on signs are now unique. Gravestones are unique within each graveyard.
+ * Street signs now have torches on top of them.
+ * The mini farms in the city will no longer have naughty pigs ruining them. Thanks to Sammmiii for letting me know about that.
