--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -3,6 +3,7 @@
 I am aiming to have these things in V1.5.0:
 
  * Rotating buildings to the nearest path.
+ * Block rotation: stairs, ladders, levers, buttons, sign posts, furnaces, dispensers, pumpkins, beds, trapdoors
  * More buildings (rich house with pool, ruined house)
  * Other stuff...
 
