--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -3,7 +3,7 @@
 I am aiming to have these things in V1.5.0:
 
  * Rotating buildings to the nearest path.
- * Block rotation: doors, levers, buttons, sign posts, furnaces, dispensers, pumpkins, beds, trapdoors
+ * Block rotation: doors, buttons, sign posts, pumpkins, beds, trapdoors
  * More buildings (rich house with pool, ruined house)
  * Other stuff...
 
