--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -4,7 +4,7 @@ I am aiming to have these things in V1.5.0:
 
  * Rotating buildings to the nearest path.
  * Importing portraits (if I can figure out how to do that)
- * More buildings (baths, normal library, ruined house, shrine)
+ * More buildings (baths, normal library, ruined house)
  * Add items to the chests
  * Other stuff...
 
