--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -6,6 +6,7 @@ I am aiming to have these things in V1.5.0:
  * Importing portraits (if I can figure out how to do that)
  * More buildings (baths, normal library, ruined house)
  * Add items to the chests
+ * Generate signs more dynamically
  * Create a FAQ (in progress)
  * Other stuff...
 
