Edited wiki page ToDo through web user interface.

--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -1,4 +1,5 @@
 #summary Planned and possible features
+#labels Featured
 
 For changes that are done, but not released yet, please see the UnreleasedChanges page.
 
