Edited wiki page FAQ through web user interface.

--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -74,9 +74,6 @@
 *All Mace cities are square, any plans to change that?*
 	There's a lot of code in the generator that relies on the city being square, so that's the best way for it to be right now. 
 
-*All Mace buildings are square, any plans to change that?*
-	Currently I don't have any plans to change this. Squares are a lot easier to deal with and rectangular buildings can be created within squares, so I'm happy with the way it works.
-
 *When a new feature is added to !MineCraft, will you add it to Mace?*
 	If I can find a good use for it, then I definitely will!
 
@@ -100,7 +97,10 @@
 	Copy one of the existing buildings, from the {{{<building>}}} tag to the {{{</building>}}} tag. Paste this in the line below. Give your building a name that doesn't exist. Change the size to be the amount of blocks on each side (remember that this includes blocks containing torches), then set the source_x and source_y, which can be found by going to the front-right corner of your building and pressing F3. If your building has an underground area, add/edit a source_start_y tag and set the value to be the lowest point of your building. If you don't know, just set this to be 1. Then finally set the frequency from "very common", "common", "average", "rare" or "very rare".
 
 	Save the file. Close !MineCraft. Copy the world back to the Mace resources folder. Then generate a new city!
-		
+
+*All Mace buildings are square, any plans to change that?*
+	Currently I don't have any plans to change this. Squares are a lot easier to deal with and rectangular/circular buildings can be created within squares, so I'm happy with the way it works.
+
 *Do Mace buildings have a theme?*
 	My inspiration for buildings is anything you would find in a typical medieval or Dungeons & Dragons city. I also include buildings that make sense for !MineCraft, such as a crafting hut.
 
