Edited wiki page UnreleasedChanges through web user interface.

--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -20,4 +20,4 @@ These changes are done and will be in V1.5.0:
  * Street signs now have torches on top of them.
  * The mini farms in the city will no longer have naughty pigs ruining them. Thanks to Sammmiii for letting me know about that.
  * House chests around the city now have some assorted items in them. Thanks to Ghostdancer for pointing out how empty they all were
- * Added a Frequently Asked Questions ([[FAQ]]) page to the wiki
+ * Added a [[FAQ]] (Frequently Asked Questions) page to the wiki
