Edited wiki page UnreleasedChanges through web user interface.

--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -11,7 +11,7 @@ I am aiming to have these things in V1.5.0:
 
 These changes are done and will be in V1.5.0:
 
- * Added new buildings: market, house with a garden roof, shrine
+ * Added new buildings: market, house with a garden roof, shrine, baths
  * "Very rare" buildings will not spawn within 50 blocks of the same type of building. "Rare" buildings will not spawn within 25 blocks of the same type of building.
  * Greenhouses are now "rare" frequency, rather than "average". Thanks to Sammmiii for this suggestion.
  * Streets names are now all unique.
