--- a/wiki/GuardTowers.wiki
+++ b/wiki/GuardTowers.wiki
@@ -7,3 +7,4 @@ This page refers to the four guard towers at the corners of the city walls.
 = Planned features =
 
   * Different designs
+  * Move to the resources world
