--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -19,6 +19,6 @@ These changes are done and will be in V1.5.0:
  * Building names on signs are now unique. Gravestones are unique within each graveyard.
  * Street signs now have torches on top of them.
  * The mini farms in the city will no longer have naughty pigs ruining them. Thanks to Sammmiii for letting me know about that.
- * House chests around the city now have some assorted items in them. Thanks to Ghostdancer for pointing out how empty they all were
+ * House chests around the city now have random assorted items in them. Thanks to Ghostdancer for pointing out how empty they all were
  * Added a [FAQ] (Frequently Asked Questions) page to the wiki
  * You can now specify the city/world name, as long as it doesn't already exist. Thanks to Ghostdancer for suggesting this.
